--- a/index.html
+++ b/index.html
@@ -40,102 +40,111 @@
         </div>
     </header>
     <section class="header-slider">
-        <div class="header-slider-wrap">
-            <img src="./img/photo/slider business.png" alt="">
-            <img src="./img/photo/slider business.png" alt="">
-            <img src="./img/photo/slider business.png" alt="">
-            <img src="./img/photo/slider business.png" alt="">
 
-        </div>
-        <div class="header-slider-absolute">
-            <div class="square-decorate"></div>
-            <div class="container">
-                <div class="header-slider__content">
-                    <div class="connection-info">
-                        <div class="connection-info__item">
-                            <div class="navigation-item navigation-item--phones">
-                                <img src="./img/icons/phone icon.svg" class="navigation-item__icon" alt="phone">
-                                <div class="navigation-item__inner">
-                                    <a href="tel:+380637909294" class="navigation-item__link">+38 (063) 790-92-94</a>
-                                    <a href="tel:+79092077688" class="navigation-item__link">+7 (909) 207-76-88</a>
-                                </div>
-                            </div>
-                            <div class="navigation-item navigation-item--email">
-                                <img src="./img/icons/mail icon.svg" alt="mail" class="navigation-item__icon">
-                                <a class="navigation-item__link"
-                                    href="mailto:admissions@edugainoverseas.com">admissions@edugainoverseas.com</a>
-                            </div>
-                        </div>
-                        <div class="connection-info__item">
-                            <div class="search">
-                                <input type="text" placeholder="serch..." class="search__input">
-                                <button class="search__btn"><img src="./img/icons/icon_search.svg"
-                                        alt="search"></button>
-                            </div>
-                            <a href="" class="btn connection-info__btn">Apply online</a>
-                        </div>
+        <!-- jquery slider try -->
 
-
-                    </div>
-
-                    <div class="header-slider__block">
-                        <h1 class="header-slider__mail-title">Business</h1>
-                        <div class="subtitle-wrap">
-                            <img src="./img/photo/dots.svg" alt="" class="dots-img">
-                            <h2 class="header-slider__subtitle">Edugain in Ukranian
-                                <span class="header-subtitle-decorate">and Russian</span> </h2>
-                        </div>
-
-                        <p class="header-slider__info">
-                            The best thing about studying MBBS in Russia that there is no entrance test for admission in
-                            Russian
-                            medical colleges/universities. The degrees have been validated by WHO and UNESCO
-                        </p>
-                        <a href="#" class="btn btn--header-slider">Deeeee nkjn</a>
-                    </div>
-                    <nav class="header-slider__nav">
-                        <ul class="header-slider__nav-list">
-                            <li class="header-slider__nav-item"><span class="header-slider__nav-num">01</span></li>
-                            <li class="header-slider__nav-item header-slider__nav-item--active"><span
-                                    class="header-slider__nav-num">02</span></li>
-                            <li class="header-slider__nav-item"><span class="header-slider__nav-num">03</span></li>
-                            <li class="header-slider__nav-item"><span class="header-slider__nav-num">04</span></li>
-                            <li class="header-slider__nav-item"><span class="header-slider__nav-num">05</span></li>
-                            <li class="header-slider__nav-item"><span class="header-slider__nav-num">06</span></li>
-                        </ul>
-
-                        <div class="header-slider__buttons">
-                            <button class="slider-header-btn js-header-slide-prev"><img src="./img/icons/btn-prev.svg"
-                                    alt=""></button>
-                            <button class="slider-header-btn js-header-slide-next"><img src="./img/icons/next-btn.svg"
-                                    alt=""></button>
-
-                        </div>
-                    </nav>
-                    <nav class="social-nav">
-                        <ul class="social-nav__list">
-                            <div class="social-nav__main"><img src="img/icons//whatsapp 1.svg" alt=""></div>
-                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                        src="./img/icons/envelope.svg" alt=""></a></li>
-                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                        src="./img/icons/whatsUp.svg" alt=""></a></li>
-                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                        src="./img/icons/vider.svg" alt=""></a></li>
-                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                        src="./img/icons/telegram.svg" alt=""></a></li>
-                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                        src="./img/icons/instagram.svg" alt=""></a></li>
-                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                        src="./img/icons/linked-in.svg" alt=""></a></li>
-                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                        src="./img/icons/facebook.svg" alt=""></a></li>
-                            <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                        src="./img/icons/youtube.svg" alt=""></a></li>
-
-                        </ul>
-                    </nav>
-                </div>
+        <!-- <div class="header-slider-wrap">
+            <div> <img src="./img/photo/slider business.png" alt="">
             </div>
+            <div> <img src="./img/photo/computer.png" alt="">
+            </div>
+            <div> <img src="./img/photo/slider business.png" alt="">
+            </div>
+            <div>
+            <img src="./img/photo/engineering.png" alt="">
+            </div>
+
+        </div> -->
+        <!-- <div class="header-slider-absolute"> -->
+        <div class="square-decorate">
+            <div class="square-decorate__inner"></div>
+        </div>
+        <div class="container">
+            <div class="header-slider__content">
+                <div class="connection-info">
+                    <div class="connection-info__item">
+                        <div class="navigation-item navigation-item--phones">
+                            <img src="./img/icons/phone icon.svg" class="navigation-item__icon" alt="phone">
+                            <div class="navigation-item__inner">
+                                <a href="tel:+380637909294" class="navigation-item__link">+38 (063) 790-92-94</a>
+                                <a href="tel:+79092077688" class="navigation-item__link">+7 (909) 207-76-88</a>
+                            </div>
+                        </div>
+                        <div class="navigation-item navigation-item--email">
+                            <img src="./img/icons/mail icon.svg" alt="mail" class="navigation-item__icon">
+                            <a class="navigation-item__link"
+                                href="mailto:admissions@edugainoverseas.com">admissions@edugainoverseas.com</a>
+                        </div>
+                    </div>
+                    <div class="connection-info__item">
+                        <div class="search">
+                            <input type="text" placeholder="serch..." class="search__input">
+                            <button class="search__btn"><img src="./img/icons/icon_search.svg" alt="search"></button>
+                        </div>
+                        <a href="" class="btn connection-info__btn">Apply online</a>
+                    </div>
+
+
+                </div>
+
+                <div class="header-slider__block">
+                    <h1 class="header-slider__mail-title">Business</h1>
+                    <div class="subtitle-wrap">
+                        <img src="./img/photo/dots.svg" alt="" class="dots-img">
+                        <h2 class="header-slider__subtitle">Edugain in Ukranian
+                            <span class="header-subtitle-decorate">and Russian</span> </h2>
+                    </div>
+
+                    <p class="header-slider__info">
+                        The best thing about studying MBBS in Russia that there is no entrance test for admission in
+                        Russian
+                        medical colleges/universities. The degrees have been validated by WHO and UNESCO
+                    </p>
+                    <a href="#" class="btn btn--header-slider">Deeeee nkjn</a>
+                </div>
+                <nav class="header-slider__nav">
+                    <ul class="header-slider__nav-list">
+                        <li class="header-slider__nav-item header-slider__nav-item--active"><span
+                                class="header-slider__nav-num">01</span></li>
+                        <li class="header-slider__nav-item "><span class="header-slider__nav-num">02</span></li>
+                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">03</span></li>
+                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">04</span></li>
+                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">05</span></li>
+                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">06</span></li>
+                    </ul>
+
+                    <div class="header-slider__buttons">
+                        <button class="slider-header-btn js-header-slide-prev"><img src="./img/icons/btn-prev.svg"
+                                alt=""></button>
+                        <button class="slider-header-btn js-header-slide-next"><img src="./img/icons/next-btn.svg"
+                                alt=""></button>
+
+                    </div>
+                </nav>
+                <nav class="social-nav">
+                    <ul class="social-nav__list">
+                        <div class="social-nav__main"><img src="img/icons//whatsapp 1.svg" alt=""></div>
+                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                    src="./img/icons/envelope.svg" alt=""></a></li>
+                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                    src="./img/icons/whatsUp.svg" alt=""></a></li>
+                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                    src="./img/icons/vider.svg" alt=""></a></li>
+                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                    src="./img/icons/telegram.svg" alt=""></a></li>
+                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                    src="./img/icons/instagram.svg" alt=""></a></li>
+                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                    src="./img/icons/linked-in.svg" alt=""></a></li>
+                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                    src="./img/icons/facebook.svg" alt=""></a></li>
+                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
+                                    src="./img/icons/youtube.svg" alt=""></a></li>
+
+                    </ul>
+                </nav>
+            </div>
+            <!-- </div> -->
         </div>
     </section>
     <div class="assistent-slider-wrap">
@@ -461,12 +470,13 @@
                     </div>
                     <form action="#" class="admission-form admission-form--in-block">
                         <h3 class="admission-form__header">COMPLETE THE FORM</h3>
-                        <p class="admission-form__subtitle">Fill out an online form to apply for a Russian </p>
+                        <p class="admission-form__subtitle">Fill out an online form to apply for Russian or Ukrainian
+                            universities</p>
                         <input type="text" placeholder="Name" class="admission-form__input">
                         <input type="email" placeholder="Email" class="admission-form__input">
                         <input type="tel" placeholder="Phone" class="admission-form__input">
                         <input type="text" placeholder="Country" class="admission-form__input">
-                        <input type="submit" class="btn" placeholder="send">
+                        <input type="submit" class="btn btn--submit admission-form__btn" value="Send">
                     </form>
                 </div>
             </div>
@@ -830,21 +840,24 @@
         <img src="img/icons/arrow_up.svg" alt="up" class="upArrow">
     </a>
     <footer class="footer">
+        <div class="footer-decarate"></div>
         <div class="telephones">
+            <!-- <div class="telephones__wrap"> -->
             <img src="./img/icons/telephone.svg" class="telephones__icon" alt="tel">
             <div class="telephones__inner">
                 <a href="tel:+380637909294" class="telephones__link">+38 (063) 790-92-94</a>
                 <a href="tel:+79092077688" class="telephones__link">+7 (909) 207-76-88</a>
             </div>
+            <!-- </div> -->
         </div>
         <div class="container">
             <h3 class="form-title">Or fill in the form</h3>
             <form action="" class="footer-form">
-                <input type="text" placeholder="First Name" class="footer-form__input">
-                <input type="text" placeholder="Country" class="footer-form__input">
-                <input type="text" placeholder="Phone Number" class="footer-form__input">
-                <input type="email" placeholder="Email Adress" class="footer-form__input">
-                <input type="submit" placeholder="Request INFO">
+                <input type="text" placeholder="First Name" class="footer-form__input footer-form__input--name">
+                <input type=" text" placeholder="Country" class="footer-form__input footer-form__input--country">
+                <input type="text" placeholder="Phone Number" class="footer-form__input footer-form__input--phone">
+                <input type="email" placeholder="Email Adress" class="footer-form__input footer-form__input--email">
+                <input type="submit" class="btn footer-form__btn" value="Request Info">
             </form>
             <div class="footer-items">
                 <div class="footer-item">
@@ -888,7 +901,7 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/headerSticky.js"></script>
 
-    <script src="./js/header-slide.js"></script>
+    <!-- <script src="./js/header-slide.js"></script> -->
     <script src="./js/header-assintend-slider.js"></script>
     <script src="./js/university-slider.js"></script>
     <script src="./js/courses-slider.js"></script>
