add slider data

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </div>
     </header>
     <section class="header-slider">
+        <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
 
         <!-- jquery slider try -->
 
@@ -56,8 +57,9 @@
 
         </div> -->
         <!-- <div class="header-slider-absolute"> -->
-        <div class="square-decorate">
-            <div class="square-decorate__inner"></div>
+        <div class="rectangle-decorate">
+            <div class="rectangle-decorate__inner"></div>
+            <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
         </div>
         <div class="container">
             <div class="header-slider__content">
@@ -83,30 +85,27 @@
                         </div>
                         <a href="" class="btn connection-info__btn">Apply online</a>
                     </div>
-
-
                 </div>
-
                 <div class="header-slider__block">
-                    <h1 class="header-slider__mail-title">Business</h1>
+                    <h1 class="header-slider__mail-title js-title">Business</h1>
                     <div class="subtitle-wrap">
                         <img src="./img/photo/dots.svg" alt="" class="dots-img">
                         <h2 class="header-slider__subtitle">Edugain in Ukranian
                             <span class="header-subtitle-decorate">and Russian</span> </h2>
                     </div>
 
-                    <p class="header-slider__info">
+                    <p class="header-slider__info js-info">
                         The best thing about studying MBBS in Russia that there is no entrance test for admission in
                         Russian
                         medical colleges/universities. The degrees have been validated by WHO and UNESCO
                     </p>
-                    <a href="#" class="btn btn--header-slider">Deeeee nkjn</a>
+                    <a href="#" class="btn btn--header-slider js-link">Deeeee nkjn</a>
                 </div>
                 <nav class="header-slider__nav">
                     <ul class="header-slider__nav-list">
                         <li class="header-slider__nav-item header-slider__nav-item--active"><span
                                 class="header-slider__nav-num">01</span></li>
-                        <li class="header-slider__nav-item "><span class="header-slider__nav-num">02</span></li>
+                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">02</span></li>
                         <li class="header-slider__nav-item"><span class="header-slider__nav-num">03</span></li>
                         <li class="header-slider__nav-item"><span class="header-slider__nav-num">04</span></li>
                         <li class="header-slider__nav-item"><span class="header-slider__nav-num">05</span></li>
@@ -229,6 +228,10 @@
         </div>
     </div>
     <section class="universities">
+
+
+        <div class="square-decorate"></div>
+        <div class="square-decorate square-decorate--transparent"></div>
         <div class="container">
             <div class="universities-wrap">
                 <div class="title-block">
@@ -404,6 +407,7 @@
         </div>
     </section>
     <section class="admission">
+
         <div class="container">
             <div class="admission-block-wrap">
                 <div class="admission-item-wrap">
@@ -622,6 +626,8 @@
         </div>
     </section>
     <section class="academic-header">
+        <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
+
         <div class="container">
             <div class="academic-header__content">
                 <img class="academic-header__icon" src="./img/icons/graduation-icon.svg" alt="graduation">
@@ -642,6 +648,8 @@
         </div>
     </section>
     <section class="benefits">
+        <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
+
         <div class="container">
             <div class="title-block">
                 <img src="./img/icons/logo.svg" alt="logo" width="280" height="70" class="title-block__img">
@@ -902,7 +910,7 @@
     <script src="./js/headerSticky.js"></script>
 
     <!-- <script src="./js/header-slide.js"></script> -->
-    <script src="./js/header-assintend-slider.js"></script>
+    <script src="./js/header-assintend-slider.js" type="module"></script>
     <script src="./js/university-slider.js"></script>
     <script src="./js/courses-slider.js"></script>
     <script src="./js/gallery-slider.js"></script>
