add slider university logic

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </div>
         </div>
         <div class="slider-wrap universities__slider">
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-universities">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -263,7 +263,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-universities">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -277,7 +277,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-universities">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -291,7 +291,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-universities">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -305,7 +305,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-universities">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -319,7 +319,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-universities">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -333,7 +333,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-universities">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -347,7 +347,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-universities">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -361,7 +361,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-universities">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -379,7 +379,8 @@
         <div class="container">
             <div class="slider-nav">
                 <div class="slider-line">
-                    <ul class="slider-line__list">
+                    <ul class="slider-line__list js-slider-line-universities">
+                        <!-- <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
@@ -388,8 +389,7 @@
                         <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li> -->
                     </ul>
                 </div>
                 <div class="btn-wrap">
