add sliders lines

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                 gkdhvdvkhdkfvhscsdckjsckjsdkjcsdkjckjsdckjsdbckjsbdkcskjdbckjsbckjsbckjskjcscndsncdvfdvfvd</p>
         </div>
         <div class="slider-wrap courses__slider">
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-courses">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -513,7 +513,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-courses">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -527,7 +527,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-courses">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -541,7 +541,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-courses">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -555,7 +555,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-courses">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -569,7 +569,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-courses">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -583,7 +583,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item js-slider-item-courses">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -601,7 +601,8 @@
         <div class="container">
             <div class="slider-nav">
                 <div class="slider-line">
-                    <ul class="slider-line__list">
+                    <ul class="slider-line__list js-slider-line-courses">
+                        <!-- <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
@@ -610,8 +611,7 @@
                         <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li> -->
                     </ul>
                 </div>
                 <div class="btn-wrap">
@@ -705,19 +705,20 @@
             </div>
         </div>
         <div class="slider-wrap gallery__slider">
-            <img src="./img/photo/gallery-slider-1.png" alt="slider" class="gallery-slider-item">
-            <img src="./img/photo/gallery-slider-2.png" alt="slider" class="gallery-slider-item">
-            <img src="./img/photo/gallery-slider-3.png" alt="slider" class="gallery-slider-item">
-            <img src="./img/photo/gallery-slider-4.png" alt="slider" class="gallery-slider-item">
-            <img src="./img/photo/gallery-slider-1.png" alt="slider" class="gallery-slider-item">
-            <img src="./img/photo/gallery-slider-2.png" alt="slider" class="gallery-slider-item">
-            <img src="./img/photo/gallery-slider-3.png" alt="slider" class="gallery-slider-item">
-            <img src="./img/photo/gallery-slider-4.png" alt="slider" class="gallery-slider-item">
+            <img src="./img/photo/gallery-slider-1.png" alt="slider" class="gallery-slider-item js-slider-item-gallery">
+            <img src="./img/photo/gallery-slider-2.png" alt="slider" class="gallery-slider-item js-slider-item-gallery">
+            <img src="./img/photo/gallery-slider-3.png" alt="slider" class="gallery-slider-item js-slider-item-gallery">
+            <img src="./img/photo/gallery-slider-4.png" alt="slider" class="gallery-slider-item js-slider-item-gallery">
+            <img src="./img/photo/gallery-slider-1.png" alt="slider" class="gallery-slider-item js-slider-item-gallery">
+            <img src="./img/photo/gallery-slider-2.png" alt="slider" class="gallery-slider-item js-slider-item-gallery">
+            <img src="./img/photo/gallery-slider-3.png" alt="slider" class="gallery-slider-item js-slider-item-gallery">
+            <img src="./img/photo/gallery-slider-4.png" alt="slider" class="gallery-slider-item js-slider-item-gallery">
         </div>
         <div class="container">
             <div class="slider-nav">
                 <div class="slider-line">
-                    <ul class="slider-line__list">
+                    <ul class="slider-line__list js-slider-line-gallery">
+                        <!-- <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
@@ -726,8 +727,7 @@
                         <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
                         <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
+                        <li class="slider-line-point"></li> -->
                     </ul>
                 </div>
                 <div class="btn-wrap">
