--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     </header>
     <section class="header-slider">
         <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
-
+        <img src="./img//icons/arrow-decorate.svg" width="216" height="322" alt=""
+            class="arrow-decorate arrow-decorate--right">
         <!-- jquery slider try -->
 
         <div class="header-slider-wrap">
@@ -408,7 +409,9 @@
         </div>
     </section>
     <section class="admission">
-
+        <div class="diamond-decorate  diamond-decorate--blue">
+            <div class="diamond-decorate-transparent"></div>
+        </div>
         <div class="container">
             <div class="admission-block-wrap">
                 <div class="admission-item-wrap">
@@ -750,6 +753,26 @@
                 </div>
             </div>
             <div class="feedback-slider">
+                <div class="feedback-slider__nav">
+
+                    <div class="feedback-slider__list">
+
+                    </div>
+                    <!-- <ul class="feedback-slider__list">
+                        <li class="feedback-slider__point"></li>
+                        <li class="feedback-slider__point"></li>
+                        <li class="feedback-slider__point feedback-slider__point--active"></li>
+                        <li class="feedback-slider__point"></li>
+                        <li class="feedback-slider__point"></li>
+                    </ul> -->
+
+                    <div class="btn-wrap">
+                        <button class="btn slider-nav-btn slider-nav-btn--prev js-feedback-slider__prev-btn"><i
+                                class="fas fa-arrow-left"></i></button>
+                        <button class="btn slider-nav-btn slider-nav-btn--next js-feedback-slider__next-btn"><i
+                                class="fas fa-arrow-right"></i></button>
+                    </div>
+                </div>
                 <div class="quotes">
                     <img src="./img/icons/“.svg" alt="''">
                 </div>
