--- a/index.html
+++ b/index.html
@@ -38,6 +38,73 @@
                 </nav>
             </div>
         </div>
+        <div class="adaptive-menu">
+            <div class="connection-info__item">
+                <div class="navigation-item ">
+                    <img src="./img/icons/phone icon.svg" class="navigation-item__icon" alt="phone">
+
+                    <a href="tel:+380637909294" class="navigation-item__link">+38 (063) 790-92-94</a>
+
+                </div>
+                <div class="navigation-item ">
+                    <img src="./img/icons/phone icon.svg" class="navigation-item__icon" alt="phone">
+                    <a href="tel:+79092077688" class="navigation-item__link">+7 (909) 207-76-88</a>
+                </div>
+
+                <div class="navigation-item navigation-item--email">
+                    <img src="./img/icons/mail icon.svg" alt="mail" class="navigation-item__icon">
+                    <a class="navigation-item__link"
+                        href="mailto:admissions@edugainoverseas.com">admissions@edugainoverseas.com</a>
+                </div>
+
+            </div>
+            <ul class="social-links-list">
+                <li><a href=""><img src="./img//icons/whatsapp 2.svg" alt=""></a></li>
+                <li><a href=""><img src="./img//icons/menu instagram.svg" alt=""></a></li>
+                <li><a href=""><img src="./img//icons/menu linkedn.svg" alt=""></a></li>
+                <li><a href=""><img src="./img//icons/menu facebook.svg" alt=""></a></li>
+            </ul>
+            <p class="adaptive-menu__info">
+                Edugain in Ukranian рлвмвпмлоиыб мсрмосмыо свы сырвмсорывмсормыворсмыовмсывмосмыо and Russian
+            </p>
+            <nav class="navigation-menu">
+                <h3 class="navigation-menu__title">
+                    Navigation Menu
+                </h3>
+                <details>
+                    <summary>HOME</summary>
+                    <ul>
+                        <li><a href=""> About Edugain verseas</a></li>
+                        <li><a href=""> Admission Prcer</a></li>
+                        <li><a href=""> Media</a></li>
+                    </ul>
+                </details>
+                <details>
+                    <summary>RUSSIA</summary>
+                    <ul>
+                        <li><a href=""> About Edugain verseas</a></li>
+                        <li><a href=""> Admission Prcer</a></li>
+                        <li><a href=""> Media</a></li>
+                    </ul>
+                </details>
+                <details>
+                    <summary>UKRAINE</summary>
+                    <ul>
+                        <li><a href=""> About Edugain verseas</a></li>
+                        <li><a href=""> Admission Prcer</a></li>
+                        <li><a href=""> Media</a></li>
+                    </ul>
+                </details>
+                <details>
+                    <summary>UNIVERSITIES</summary>
+                    <ul>
+                        <li><a href=""> About Edugain verseas</a></li>
+                        <li><a href=""> Admission Prcer</a></li>
+                        <li><a href=""> Media</a></li>
+                    </ul>
+                </details>
+            </nav>
+        </div>
     </header>
     <section class="header-slider">
         <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
